refactor: URLReader to use URL class and enhance output; update Cliente and Servidor to properly close resources